tests/parse_print/random_perturb/set01/change-08/stderr.expected
Error:
    Parser error in file: tests/parse_print/random_perturb/set01/change-08/change-08.essence Error is:
ValidatorError tests/parse_print/random_perturb/set01/change-08/change-08.essence:3:26:
  |
3 | find x : set (size 2) of inN(1..3)
  |                          ^^^
Error: Symbol not found "inN"
